# Robot-Grasp-Detection-Data-Annotation-Tool

./: .gitignore  README.md  README_CN.md  pyproject.toml  requirements.txt  test.py
QtPage/: ActionView.py  FileListView.py  MainWindow.py  ShowView.py
